Add buttons and new view for transportation button

--- a/T&A_App/Base.lproj/Main.storyboard
+++ b/T&A_App/Base.lproj/Main.storyboard
@@ -28,13 +28,24 @@
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="transportation.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="U28-KI-yRN">
                                         <rect key="frame" x="8" y="8" width="285" height="279"/>
                                     </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xbh-yj-cdb">
+                                        <rect key="frame" x="8" y="8" width="285" height="279"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <segue destination="UEH-sP-eNc" kind="show" id="WOS-lq-is7"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="bottomMargin" secondItem="U28-KI-yRN" secondAttribute="bottom" id="AAo-13-8Xa"/>
                                     <constraint firstItem="U28-KI-yRN" firstAttribute="leading" secondItem="QDw-Re-4sr" secondAttribute="leadingMargin" id="CL2-bY-ftY"/>
+                                    <constraint firstItem="Xbh-yj-cdb" firstAttribute="top" secondItem="QDw-Re-4sr" secondAttribute="topMargin" id="HVQ-S0-mta"/>
+                                    <constraint firstItem="Xbh-yj-cdb" firstAttribute="leading" secondItem="QDw-Re-4sr" secondAttribute="leadingMargin" id="QAp-S4-0f5"/>
+                                    <constraint firstItem="Xbh-yj-cdb" firstAttribute="trailing" secondItem="QDw-Re-4sr" secondAttribute="trailingMargin" id="UMz-2L-qfj"/>
                                     <constraint firstItem="U28-KI-yRN" firstAttribute="top" secondItem="QDw-Re-4sr" secondAttribute="topMargin" id="Y6t-S5-ieb"/>
                                     <constraint firstAttribute="trailingMargin" secondItem="U28-KI-yRN" secondAttribute="trailing" id="alz-Pp-oeT"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="Xbh-yj-cdb" secondAttribute="bottom" id="gJT-N9-yn9"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R5G-vf-rif" userLabel="Animal">
@@ -43,13 +54,21 @@
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="animals.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="eu9-Ia-Dfc">
                                         <rect key="frame" x="8" y="8" width="285" height="279"/>
                                     </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BeJ-uo-DO2">
+                                        <rect key="frame" x="8" y="8" width="285" height="279"/>
+                                        <state key="normal" title="Button"/>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="trailingMargin" secondItem="eu9-Ia-Dfc" secondAttribute="trailing" id="31i-TJ-MuO"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="BeJ-uo-DO2" secondAttribute="trailing" id="9rb-eB-8pa"/>
                                     <constraint firstItem="eu9-Ia-Dfc" firstAttribute="top" secondItem="R5G-vf-rif" secondAttribute="topMargin" id="Lof-cC-yYC"/>
                                     <constraint firstItem="eu9-Ia-Dfc" firstAttribute="leading" secondItem="R5G-vf-rif" secondAttribute="leadingMargin" id="NW3-EG-xuk"/>
                                     <constraint firstAttribute="bottomMargin" secondItem="eu9-Ia-Dfc" secondAttribute="bottom" id="Tpd-DP-TEp"/>
+                                    <constraint firstItem="BeJ-uo-DO2" firstAttribute="leading" secondItem="R5G-vf-rif" secondAttribute="leadingMargin" id="bA3-Mq-aZj"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="BeJ-uo-DO2" secondAttribute="bottom" id="eyi-Dj-T36"/>
+                                    <constraint firstItem="BeJ-uo-DO2" firstAttribute="top" secondItem="R5G-vf-rif" secondAttribute="topMargin" id="iYu-kf-mOX"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -70,7 +89,57 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="848.72563718140941" y="-548"/>
+            <point key="canvasLocation" x="676" y="-548"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="XVO-1n-Trf">
+            <objects>
+                <viewController id="UEH-sP-eNc" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="26A-mE-hUd"/>
+                        <viewControllerLayoutGuide type="bottom" id="y6v-t1-EIL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="suK-Fl-nps">
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QPZ-Xh-gpr">
+                                <rect key="frame" x="213" y="99" width="240" height="176"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="train.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="ffx-cP-qDk">
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="176"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="ffx-cP-qDk" firstAttribute="centerY" secondItem="QPZ-Xh-gpr" secondAttribute="centerY" id="0JH-wb-kFu"/>
+                                    <constraint firstItem="ffx-cP-qDk" firstAttribute="centerX" secondItem="QPZ-Xh-gpr" secondAttribute="centerX" id="cJs-hj-fkC"/>
+                                    <constraint firstItem="ffx-cP-qDk" firstAttribute="height" secondItem="QPZ-Xh-gpr" secondAttribute="height" id="cMh-ij-iMk"/>
+                                    <constraint firstItem="ffx-cP-qDk" firstAttribute="width" secondItem="QPZ-Xh-gpr" secondAttribute="width" id="tvm-vJ-aBW"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nbl-uN-QNg">
+                                <rect key="frame" x="303" y="72" width="61" height="19"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Nbl-uN-QNg" firstAttribute="centerX" secondItem="suK-Fl-nps" secondAttribute="centerX" id="0Wz-Tz-2a6"/>
+                            <constraint firstItem="QPZ-Xh-gpr" firstAttribute="centerX" secondItem="suK-Fl-nps" secondAttribute="centerX" id="1Fx-Fu-jNj"/>
+                            <constraint firstItem="Nbl-uN-QNg" firstAttribute="top" secondItem="26A-mE-hUd" secondAttribute="bottom" constant="8" id="V0u-1J-gf3"/>
+                            <constraint firstItem="y6v-t1-EIL" firstAttribute="top" secondItem="QPZ-Xh-gpr" secondAttribute="bottom" constant="100" id="eGb-wd-vRY"/>
+                            <constraint firstItem="QPZ-Xh-gpr" firstAttribute="leading" secondItem="suK-Fl-nps" secondAttribute="leading" constant="213" id="vVt-Tz-tYZ"/>
+                            <constraint firstItem="QPZ-Xh-gpr" firstAttribute="centerY" secondItem="suK-Fl-nps" secondAttribute="centerY" id="xFy-Ab-8y6"/>
+                            <constraint firstItem="QPZ-Xh-gpr" firstAttribute="top" secondItem="Nbl-uN-QNg" secondAttribute="bottom" constant="8" id="y5Z-ZM-DXo"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ihU-MK-VJ8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="674.21289355322347" y="376.80000000000001"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="TUS-Un-TOB">
@@ -93,6 +162,7 @@
     </scenes>
     <resources>
         <image name="animals.JPG" width="2448" height="3264"/>
+        <image name="train.JPG" width="2448" height="3264"/>
         <image name="transportation.JPG" width="2448" height="3264"/>
     </resources>
 </document>
