Add sound to TransportationController Image

--- a/T&A_App/Base.lproj/Main.storyboard
+++ b/T&A_App/Base.lproj/Main.storyboard
@@ -91,10 +91,10 @@
             </objects>
             <point key="canvasLocation" x="676" y="-548"/>
         </scene>
-        <!--View Controller-->
+        <!--Transportation View Controller-->
         <scene sceneID="XVO-1n-Trf">
             <objects>
-                <viewController id="UEH-sP-eNc" sceneMemberID="viewController">
+                <viewController id="UEH-sP-eNc" customClass="TransportationViewController" customModule="T_A_App" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="26A-mE-hUd"/>
                         <viewControllerLayoutGuide type="bottom" id="y6v-t1-EIL"/>
@@ -109,10 +109,21 @@
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="train.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="ffx-cP-qDk">
                                         <rect key="frame" x="0.0" y="0.0" width="240" height="176"/>
                                     </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FdD-xq-8zC">
+                                        <rect key="frame" x="8" y="8" width="224" height="160"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="imageButtonTapped:" destination="UEH-sP-eNc" eventType="touchUpInside" id="Foa-fD-1Nq"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="ffx-cP-qDk" firstAttribute="centerY" secondItem="QPZ-Xh-gpr" secondAttribute="centerY" id="0JH-wb-kFu"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="FdD-xq-8zC" secondAttribute="trailing" id="8P6-nH-3yt"/>
+                                    <constraint firstItem="FdD-xq-8zC" firstAttribute="leading" secondItem="QPZ-Xh-gpr" secondAttribute="leadingMargin" id="9yA-wE-1Nv"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="FdD-xq-8zC" secondAttribute="bottom" id="SvK-KF-JCt"/>
+                                    <constraint firstItem="FdD-xq-8zC" firstAttribute="top" secondItem="QPZ-Xh-gpr" secondAttribute="topMargin" id="X76-2B-zXP"/>
                                     <constraint firstItem="ffx-cP-qDk" firstAttribute="centerX" secondItem="QPZ-Xh-gpr" secondAttribute="centerX" id="cJs-hj-fkC"/>
                                     <constraint firstItem="ffx-cP-qDk" firstAttribute="height" secondItem="QPZ-Xh-gpr" secondAttribute="height" id="cMh-ij-iMk"/>
                                     <constraint firstItem="ffx-cP-qDk" firstAttribute="width" secondItem="QPZ-Xh-gpr" secondAttribute="width" id="tvm-vJ-aBW"/>
